// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator all props & tokens 1`] = `
<View
  style={
    Object {
      "borderColor": "red",
      "borderLeftWidth": 15,
    }
  }
/>
`;

exports[`Separator default 1`] = `
<View
  style={
    Object {
      "borderTopWidth": 1,
    }
  }
/>
`;
